--- a/MVC App/MVC App/Content/Site.css
+++ b/MVC App/MVC App/Content/Site.css
@@ -1,7 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
-	background-color: green;
+	background-color: yellow;
 }
 
 /* Set padding to keep content from hitting the edges */
